# chud

./: README.md  install.sh  pyproject.toml
chud/: __init__.py  cli.py  config.py  home.html  hooks.py  launcher.py  onboarding.py  platform.py  tui.py
chud/backends/: __init__.py  macos.py  win.py  x11.py
